# kiran

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  bench-history.csv  benchmarks.md  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: biology.rs  dynamics.rs  engine.rs  personality.rs  science.rs  voice_bench.rs
crates/kiran-ai/: Cargo.toml
crates/kiran-ai/src/: daimon.rs  lib.rs
crates/kiran-core/: Cargo.toml
crates/kiran-core/src/: lib.rs
crates/kiran-input/: Cargo.toml
crates/kiran-input/src/: lib.rs
crates/kiran-physics/: Cargo.toml
crates/kiran-physics/src/: lib.rs
crates/kiran-render/: Cargo.toml
crates/kiran-render/src/: lib.rs
crates/kiran-scene/: Cargo.toml
crates/kiran-scene/src/: lib.rs
docs/adr/: 001-ecs-vec-arena.md  002-toml-scene-format.md  003-wasm-scripting-sandbox.md  004-feature-gate-isolation.md
docs/architecture/: overview.md
docs/development/: dependencies.md  roadmap.md  threat-model.md
docs/guides/: performance.md  testing.md  usage.md
examples/: audio_demo.rs  behavior_demo.rs  dynamics_demo.rs  game_loop.rs  multiplayer_demo.rs  physics_demo.rs  scene_loader.rs  scripting_demo.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_asset_path.rs  fuzz_input.rs  fuzz_scene_load.rs  fuzz_world.rs
scripts/: bench-history.sh
src/: acoustics.rs  ai.rs  animation.rs  archetype.rs  asset.rs  astronomy.rs  audio.rs  biology.rs  chemistry.rs  dynamics.rs  fluids.rs  gizmos.rs  gpu.rs  input.rs  job.rs  lib.rs  lore.rs  main.rs  media.rs  nav.rs  net.rs  personality.rs  physics.rs  pool.rs  profiler.rs  reload.rs  render.rs  scene.rs  script.rs  state.rs  voice.rs  world.rs
supply-chain/: audits.toml  config.toml
tests/: integration.rs
