[package]
name = "kiran"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "Kiran — AI-native game engine for AGNOS"

[features]
default = []
ai = ["dep:reqwest", "dep:tokio"]
audio = ["dep:dhvani"]
physics = ["dep:impetus"]
rendering = ["dep:soorat"]
full = ["ai", "audio", "physics", "rendering"]

[dependencies]
# Core
glam = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
tracing = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# AI (optional)
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }

# Audio (optional)
dhvani = { version = "0.22", optional = true }

# Physics (optional)
impetus = { path = "../impetus", optional = true }

# Rendering (optional)
soorat = { path = "../soorat", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "engine"
harness = false
