[package]
name = "kiran"
version = "0.26.3"
edition = "2024"
license = "GPL-3.0"
description = "Kiran — AI-native game engine for AGNOS"
homepage = "https://github.com/MacCracken/kiran"
repository = "https://github.com/MacCracken/kiran"
readme = "README.md"
documentation = "https://docs.rs/kiran"
keywords = ["game-engine", "ecs", "physics", "rendering", "audio"]
categories = ["game-engines", "rendering"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[features]
default = []
ai = ["dep:hoosh", "dep:reqwest", "dep:tokio"]
audio = ["dep:dhvani"]
physics = ["dep:impetus"]
physics-3d = ["physics", "impetus/3d"]
rendering = ["dep:soorat"]
scripting = ["dep:kavach", "dep:tokio"]
multiplayer = ["dep:majra"]
personality = ["dep:bhava"]
navigation = ["dep:raasta"]
fluids = ["dep:pravash"]
acoustics = ["dep:goonj"]
full = ["ai", "audio", "physics", "rendering", "scripting", "multiplayer", "personality", "navigation", "fluids", "acoustics"]

[dependencies]
# Core — hisab re-exports glam types (Vec3, Mat4, Quat, etc.)
hisab = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
crossbeam-channel = "0.5"

# CLI
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# AI (optional)
hoosh = { version = "0.23", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }

# Audio (optional)
dhvani = { version = "0.22", optional = true }

# Physics (optional)
impetus = { version = "1.1", optional = true }

# Scripting (optional)
kavach = { version = "1.0.1", features = ["wasm"], default-features = false, optional = true }

# Personality (optional)
bhava = { version = "0.23", optional = true }

# Multiplayer (optional)
majra = { version = "0.22", optional = true }

# Acoustics (optional)
goonj = { version = "1.0", features = ["kiran-compat"], default-features = false, optional = true }

# Navigation (optional)
raasta = { version = "0.24", optional = true }

# Fluids (optional)
pravash = { version = "1.1", default-features = false, features = ["sph", "shallow"], optional = true }

# Rendering (optional)
soorat = { version = "0.24", default-features = false, optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "engine"
harness = false
required-features = ["rendering"]

[[bench]]
name = "personality"
harness = false
required-features = ["personality"]
