[package]
name = "kiran"
version = "1.0.0"
edition = "2024"
license = "GPL-3.0-only"
description = "Kiran — AI-native game engine for AGNOS"
homepage = "https://github.com/MacCracken/kiran"
repository = "https://github.com/MacCracken/kiran"
readme = "README.md"
documentation = "https://docs.rs/kiran"
keywords = ["game-engine", "ecs", "physics", "rendering", "audio"]
categories = ["game-engines", "rendering"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[features]
default = []

# --- Engine core ---
rendering = ["dep:soorat", "dep:prakash", "dep:ranga"]
audio = ["dep:dhvani", "dep:naad", "dep:shravan", "dep:goonj", "dep:garjan", "dep:ghurni"]
voice = ["dep:svara", "dep:shabda", "dep:prani"]
physics = ["dep:impetus"]
physics-3d = ["physics", "impetus/3d"]
fluids = ["dep:pravash"]
dynamics = ["dep:bijli", "dep:dravya", "dep:ushma", "dep:pavan"]
ai = ["dep:hoosh", "dep:reqwest", "dep:tokio"]
behavior = ["dep:bhava", "dep:bodh", "dep:mastishk", "dep:jantu"]
scripting = ["dep:kavach", "dep:tokio"]
multiplayer = ["dep:majra"]
navigation = ["dep:raasta"]
media = ["dep:tarang"]

# --- Science ---
biology = ["dep:sharira", "dep:jivanu", "dep:rasayan", "dep:vanaspati"]
chemistry = ["dep:kimiya", "dep:khanij", "dep:tanmatra", "dep:kana"]
astronomy = ["dep:falak", "dep:jyotish", "dep:tara", "dep:brahmanda", "dep:badal"]
world = ["dep:itihas", "dep:sankhya", "dep:varna", "dep:pramana"]

# --- Meta ---
full = [
    "rendering", "audio", "voice", "physics", "fluids", "dynamics",
    "ai", "behavior", "scripting", "multiplayer", "navigation", "media",
    "biology", "chemistry", "astronomy", "world",
]

[dependencies]
# Core — hisab re-exports glam types (Vec3, Mat4, Quat, etc.)
hisab = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
crossbeam-channel = "0.5"

# CLI
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Rendering (optional)
soorat = { version = "1.0", default-features = false, optional = true }
prakash = { version = "1.2", features = ["pbr", "atmosphere"], optional = true }
ranga = { version = "1.0", optional = true }

# Audio (optional)
dhvani = { version = "1.1", optional = true }
naad = { version = "1.0", optional = true }
shravan = { version = "1.0", default-features = false, features = ["std", "wav", "flac", "pcm", "ogg", "resample"], optional = true }
goonj = { version = "1.1", features = ["kiran-compat"], default-features = false, optional = true }
garjan = { version = "1.1", optional = true }
ghurni = { version = "1.0", optional = true }

# Voice (optional)
svara = { version = "2.0", optional = true }
shabda = { version = "2.0", optional = true }
prani = { version = "1.1", optional = true }

# Physics (optional)
impetus = { version = "1.3", optional = true }

# Fluids (optional)
pravash = { version = "1.2", default-features = false, features = ["sph", "shallow"], optional = true }

# Dynamics (optional)
bijli = { version = "1.1", optional = true }
dravya = { version = "1.2", optional = true }
ushma = { version = "1.3", optional = true }
pavan = { version = "1.1", optional = true }

# AI (optional)
hoosh = { version = "1.1", optional = true }
reqwest = { version = "0.13", features = ["json"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }

# Behavior (optional)
bhava = { version = "2.0", optional = true }
bodh = { version = "1.0", optional = true }
mastishk = { version = "1.1", optional = true }
jantu = { version = "1.1", optional = true }

# Scripting (optional)
kavach = { version = "1.0.1", features = ["wasm"], default-features = false, optional = true }

# Multiplayer (optional)
majra = { version = "1.0", optional = true }

# Navigation (optional)
raasta = { version = "1.0", optional = true }

# Media (optional)
tarang = { version = "1.0", optional = true }

# Biology (optional)
sharira = { version = "1.1", optional = true }
jivanu = { version = "1.0", optional = true }
rasayan = { version = "1.0", optional = true }
vanaspati = { version = "1.0", optional = true }

# Chemistry (optional)
kimiya = { version = "1.1", optional = true }
khanij = { version = "1.1", optional = true }
tanmatra = { version = "1.2", optional = true }
kana = { version = "1.1", optional = true }

# Astronomy (optional)
falak = { version = "1.0", optional = true }
jyotish = { version = "1.0", optional = true }
tara = { version = "1.0", optional = true }
brahmanda = { version = "1.0", optional = true }
badal = { version = "1.1", optional = true }

# World (optional)
itihas = { version = "1.0", optional = true }
sankhya = { version = "2.0", optional = true }
varna = { version = "1.0", optional = true }
pramana = { version = "1.2", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[example]]
name = "physics_demo"
required-features = ["physics"]

[[example]]
name = "audio_demo"
required-features = ["audio"]

[[example]]
name = "scripting_demo"
required-features = ["scripting"]

[[example]]
name = "multiplayer_demo"
required-features = ["multiplayer"]

[[example]]
name = "behavior_demo"
required-features = ["behavior"]

[[example]]
name = "dynamics_demo"
required-features = ["dynamics"]

[[bench]]
name = "engine"
harness = false
required-features = ["rendering"]

[[bench]]
name = "personality"
harness = false
required-features = ["behavior"]

[[bench]]
name = "dynamics"
harness = false
required-features = ["dynamics"]

[[bench]]
name = "biology"
harness = false
required-features = ["biology"]

[[bench]]
name = "science"
harness = false
required-features = ["chemistry", "astronomy", "world"]

[[bench]]
name = "voice_bench"
harness = false
required-features = ["voice"]
