[package]
name = "kiran-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI integration: daimon client, hoosh inference"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
