[package]
name = "kiran-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ECS, game loop, time management, events"

[dependencies]
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
