[package]
name = "kiran-physics"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Physics bridge — connects impetus physics engine to kiran ECS"

[dependencies]
kiran-core = { workspace = true }
impetus = { path = "../../../impetus" }
tracing = { workspace = true }
