[package]
name = "kiran-scene"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TOML scene format, loading, entity spawning"

[dependencies]
kiran-core = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
